fix skip links visibility for Safari

--- a/src/scss/05-components/_skip-links.scss
+++ b/src/scss/05-components/_skip-links.scss
@@ -9,9 +9,11 @@
     background-color: $color-primary;
     transition: transform .3s ease-in-out;
     transform: translate3d(0, -100%, 0);
+    opacity: 0;
 
     &:focus-within {
         transform: translate3d(0, 0, 0);
+        opacity: 1;
     }
 
     li:not(:last-of-type) {
